add links , some css and vanilla tilt.js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card">
+      <div class="card" data-tilt>
         <h2>Foolish Developer</h2>
         <!-- FORM START -->
         <form action="">
@@ -33,11 +33,13 @@
 
         <!-- SOCIAL MEDIA  START -->
         <div class="social">
-          <a href="#">Facebook</a>
-          <a href="#">Google</a>
+          <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+          <a href="https://www.google.com/" target="_blank">Google</a>
         </div>
         <!-- SOCIAL MEDIA  END -->
       </div>
     </div>
+
+    <script src="./vanilla-tilt.js"></script>
   </body>
 </html>
