add submit button

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <form action="">
           <input type="email" placeholder="Email Id" />
           <input type="password" placeholder="Password" />
-          <a href="#">
-            <h4><b>Log In</b></h4>
-          </a>
+          <input type="submit" value="Log In" />
+          <!-- <a href="#"> </a> -->
         </form>
         <!-- FORM END -->
 
